syntax = "proto3";

package order;
option go_package = "./;order";

service OrderService{
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc OrderByID(OrderByIDRequest) returns (OrderByIDResponse);
    rpc GetOrderByUserID(OrderByUSerIDRequest) returns (OrderByUserIDResponse);
    rpc OrderList(OrderListRequest) returns (OrderListResponse);
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

message Order {
    string id = 1;
    float quantity=2;
    string unit=3;
    string confirm_by=4;
    string user_id=5;
    string product_id=6;
    string status=7;
    string expired_on=8;
    string created_on=9;
    string updated_on=10;

}
message CreateOrderRequest {
    Order order = 1;
}
message CreateOrderResponse {
    string id = 1;
}

message OrderByIDRequest {
    string id = 1;
}

message OrderByIDResponse {
    Order order = 1;
}
message OrderByUSerIDRequest {
    string user_id = 1;
}
message OrderByUserIDResponse {
    repeated Order order = 1;
}
message OrderListRequest {}

message OrderListResponse {
    repeated Order order = 1;
}

message UpdateOrderRequest {
    Order order = 1;
}

message UpdateOrderResponse {}

message DeleteOrderRequest {
    string id = 1;
}

message DeleteOrderResponse {}
