syntax = "proto3";

package stock;
option go_package = "./;stock";

service StockService{
    rpc CreateStock(CreateStockRequest) returns (CreateStockResponse);
    rpc StockByID(StockByIDRequest) returns (StockByIDResponse);
    rpc StockList(StockListRequest) returns (StockListResponse);
    rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
    rpc DeleteStock(DeleteStockRequest) returns (DeleteStockResponse);
}

message Stock {
    string id = 1;
    string items_code =2;
    string items_name=3;
    int32  no_items=4;
    string supplier_id=5;
    string country =6;
    string city  =7;
    string state =8;
    int32 zipcode =9;
    string street =10;
    float latitude =11;
    float longitude=12;
    string created_on=13;
    string updated_on=14;

}
message CreateStockRequest {
    Stock stock = 1;
}
message CreateStockResponse {
    string id = 1;
}

message StockByIDRequest {
    string id = 1;
}

message StockByIDResponse {
    Stock stock = 1;
}
message StockListRequest {}

message StockListResponse {
    repeated Stock stock = 1;
}

message UpdateStockRequest {
    Stock stock = 1;
}

message UpdateStockResponse {}

message DeleteStockRequest {
    string id = 1;
}

message DeleteStockResponse {}
