syntax = "proto3";
package supplier;
option go_package = "./;supplier";

service SupplierService{
    rpc CreateSupplier(CreateSupplierRequest) returns (CreateSupplierResponse);
    rpc SupplierByID(SupplierByIDRequest) returns (SupplierByIDResponse);
    rpc GetSupplierBySupplierID(SupplierBySupplierIDRequest) returns (SupplierBySupplierIDResponse);
    rpc SupplierList(SupplierListRequest) returns (SupplierListResponse);
    rpc UpdateSupplier(UpdateSupplierRequest) returns (UpdateSupplierResponse);
    rpc DeleteSupplier(DeleteSupplierRequest) returns (DeleteSupplierResponse);
}
message Supplier {
    string id = 1;
    string supplier_name=2;
    string country =3;
    string city  =4;
    string state =5;
    int32 zipcode =6;
    string street =7;
    float latitude =8;
    float longitude=9;
    string  fax=10;
    string pobox=11;
    string email=12;
    string website=13;
    string phone=14;
    string created_on=15;
    string updated_on=16;

}
message CreateSupplierRequest {
    Supplier supplier = 1;
}
message CreateSupplierResponse {
    string id = 1;
}

message SupplierByIDRequest {
    string id = 1;
}
message SupplierByIDResponse {
    Supplier supplier= 1;
}
message SupplierBySupplierIDRequest {
    string id = 1;
}
message SupplierBySupplierIDResponse {
    Supplier supplier= 1;
}
message SupplierListRequest {}

message SupplierListResponse {
    repeated Supplier supplier = 1;
}

message UpdateSupplierRequest {
    Supplier supplier = 1;
}
message UpdateSupplierResponse {}

message DeleteSupplierRequest {
    string id = 1;
}
message DeleteSupplierResponse {}
